Fixed that ::before full width background 'hack' created scrollbar on x-axis

--- a/dev/scss/utils/_reset.scss
+++ b/dev/scss/utils/_reset.scss
@@ -32,6 +32,7 @@ footer, header, hgroup, menu, nav, section {
 html, body {
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
 }
 
 //	http://www.paulirish.com/2012/box-sizing-border-box-ftw/
